--- a/nginx_uwsgi/uwsgi.ini
+++ b/nginx_uwsgi/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
-socket       = /tmp/run/uwsgi.sock
-pidfile      = /tmp/run/uwsgi.pid
-daemonize    = /tmp/log/uwsgi.log
+socket       = /tmp/uwsgi_8080.sock
+pidfile      = ./uwsgi.pid
+daemonize    = ./uwsgi.log
 chdir        = ./
 master       = 1
 file         = hello.py
